--- a/c4/misc/docker/Dockerfile.par
+++ b/c4/misc/docker/Dockerfile.par
@@ -3,7 +3,7 @@ FROM xiejw/debian
 
 RUN apt-get update \
     && apt-get install -y --no-install-recommends \
-        python3-pip python3 python3-venv \
+        python3-pip python3 python3-venv python3-dev \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
@@ -14,20 +14,27 @@ ENV PY=/pyenv/bin/python3
 
 RUN /pyenv/bin/pip3 install numpy==1.26.0 MarkupSafe==2.1.3
 RUN /pyenv/bin/pip3 install torch==2.0.1 --index-url https://download.pytorch.org/whl/cpu
+RUN /pyenv/bin/pip3 install pybind11==2.10.4
 
 RUN mkdir -p /workdir/cmd /workdir/.build
 
 COPY cmd/play_with_human.py /workdir/cmd
 COPY lib     /workdir/lib
 
-COPY misc/docker/run.sh /workdir
+COPY misc/docker/run.par.sh /workdir
+COPY misc/docker/compile.sh /workdir
 
 # Passed by `build` command line flag
 ARG WEIGHT_FILE
 
-COPY ${WEIGHT_FILE} /workdir/.build/resnet.pt.state
-ENV WEIGHT_FILE=/workdir/.build/resnet.pt.state
+COPY ${WEIGHT_FILE} /workdir/.build/traced_resnet_model.pt
+
+COPY cc     /workdir/cc
+
+RUN bash /workdir/compile.sh
+
+
 
 WORKDIR /workdir
 
-CMD ["bash", "run.sh"]
+CMD ["bash", "run.par.sh"]
