--- a/c4/misc/docker/makefile
+++ b/c4/misc/docker/makefile
@@ -1,19 +1,29 @@
-DOCKER_ASSETS = .docker_assets
+DOCKER_ASSETS    = .docker_assets
 
-ROOT_DIR      = ../..
+ROOT_DIR         = ../..
 
-DOCKER_DIRS   = ${ROOT_DIR}/lib ${ROOT_DIR}/cmd ${ROOT_DIR}/misc
+DOCKER_DIRS      = ${ROOT_DIR}/lib ${ROOT_DIR}/cmd ${ROOT_DIR}/misc
+DOCKER_PAR_DIRS  = ${ROOT_DIR}/cc ${DOCKER_DIRS}
 
 #
 # docker
 #
-build_docker:
+build_docker: clean
 	mkdir -p ${DOCKER_ASSETS} && \
 		cp -r ${DOCKER_DIRS} ${DOCKER_ASSETS} && \
 		cp ${C4_STATE_FILE} ${DOCKER_ASSETS}/resnet.pt.state && \
 	docker build -t xiejw/connect_4_pt \
 		--build-arg WEIGHT_FILE=resnet.pt.state \
 		-f Dockerfile \
+		${DOCKER_ASSETS}
+
+build_docker_par: clean
+	mkdir -p ${DOCKER_ASSETS} && \
+		cp -r ${DOCKER_PAR_DIRS} ${DOCKER_ASSETS} && \
+		cp ${C4_FILE_PATH} ${DOCKER_ASSETS}/traced_resnet_model.pt && \
+	docker build -t xiejw/connect_4_par_pt \
+		--build-arg WEIGHT_FILE=traced_resnet_model.pt \
+		-f Dockerfile.par \
 		${DOCKER_ASSETS}
 
 clean:
