--- a/c4/misc/docker/Dockerfile.par
+++ b/c4/misc/docker/Dockerfile.par
@@ -1,40 +1,41 @@
 # vim: filetype=dockerfile
-FROM xiejw/debian
+#
+# multi stage
 
-RUN apt-get update \
-    && apt-get install -y --no-install-recommends \
-        python3-pip python3 python3-venv python3-dev \
-    && apt-get clean \
-    && rm -rf /var/lib/apt/lists/*
+#
+# stage 1: build c ext
+#
+FROM xiejw/torch as build
 
-# debian 12 and above does not allow global pip installs anymore. Virtual env
-# is needed.
-RUN python3 -m venv /pyenv
-ENV PY=/pyenv/bin/python3
+RUN  apt update \
+     && apt install -y --no-install-recommends make libstdc++-12-dev g++
 
-RUN /pyenv/bin/pip3 install numpy==1.26.0 MarkupSafe==2.1.3
-RUN /pyenv/bin/pip3 install torch==2.0.1 --index-url https://download.pytorch.org/whl/cpu
-RUN /pyenv/bin/pip3 install pybind11==2.10.4
+RUN  mkdir -p /workdir
+COPY cc      /workdir/cc
 
-RUN mkdir -p /workdir/cmd /workdir/.build
+RUN  make -C /workdir/cc                                   \
+       C4_FILE_PATH=/workdir/.build/traced_resnet_model.pt \
+       C4_MODEL_ON_CPU=1                                   \
+       clean compile
+
+#
+# stage 2
+#
+FROM xiejw/torch
+
+RUN  mkdir -p /workdir/cmd /workdir/.build
 
 COPY cmd/play_with_human.py /workdir/cmd
 COPY lib     /workdir/lib
 
 COPY misc/docker/run.par.sh /workdir
-COPY misc/docker/compile.sh /workdir
 
-# Passed by `build` command line flag
-ARG WEIGHT_FILE
-
+# passed by `build` command line flag
+ARG  WEIGHT_FILE
 COPY ${WEIGHT_FILE} /workdir/.build/traced_resnet_model.pt
 
-COPY cc     /workdir/cc
-
-RUN bash /workdir/compile.sh
-
-
-
 WORKDIR /workdir
+
+COPY  --from=build /workdir/cc/*.so /workdir/
 
 CMD ["bash", "run.par.sh"]
