[c4] make all makefiles check configure.mk

--- a/c4/cc/makefile
+++ b/c4/cc/makefile
@@ -7,10 +7,9 @@ UNAME := $(shell uname)
 
 -include ../configure.mk
 
-ifndef TORCH_DIR
-$(error "TORCH_DIR is undefined. Run 'python configure.py' in top level folder")
+ifndef C4_CONFIGURE_DONE
+$(error "Project is not configured. Run 'python configure.py' in top level folder")
 endif
-
 
 CXXFLAGS  += -O3 -Wall -std=c++17 -fPIC
 
