--- a/c4/cc/makefile
+++ b/c4/cc/makefile
@@ -1,61 +1,63 @@
-# to install
+
 #
-#     pip install pybind11
-
-
-UNAME := $(shell uname)
-
+# configs from configure.py
+#
 -include ../configure.mk
 
 ifndef C4_CONFIGURE_DONE
 $(error "Project is not configured. Run 'python configure.py' in top level folder")
 endif
 
-CXXFLAGS  += -O3 -Wall -std=c++17 -fPIC
+#
+# configs
+#
+UNAME := $(shell uname)
 
-ifndef C4_FILE_PATH
-MODEL_CXXFLAGS   += -DC4_FILE_PATH='"${HOME}/Desktop/traced_resnet_model.pt"'
+ifeq ($(UNAME), Darwin)
+CXX               = clang++
 else
-MODEL_CXXFLAGS   += -DC4_FILE_PATH='"${C4_FILE_PATH}"'
+CXX               = g++
 endif
+
+LDFLAGS          += -shared
+CXXFLAGS         += -O3 -Wall -std=c++17 -fPIC
 
 ifdef C4_MODEL_ON_CPU
-CXXFLAGS += -DC4_MODEL_ON_CPU=1
+CXXFLAGS         += -DC4_MODEL_ON_CPU=1
 endif
+
+MODEL_CXXFLAGS   += -DC4_FILE_PATH='"${C4_TRACED_MODEL_FILE}"'
 
 TORCH_CXXFLAGS   += -I${TORCH_DIR}/include/
 TORCH_CXXFLAGS   += -I${TORCH_DIR}/include/torch/csrc/api/include
-
-PYBIND_CXXFLAGS  += $(shell python3 -m pybind11 --includes)
-PY_EXT     = $(shell python3-config --extension-suffix)
 
 # On macOS, we dont need torch libraries as python/torch has that already (in
 # runtime)
 #
 # However, on Linux, we need.
 ifeq ($(UNAME), Linux)
-LDFLAGS  += -L${TORCH_DIR}/lib
-LDFLAGS  += -Wl,-rpath,${TORCH_DIR}/lib
-LDFLAGS  += -ltorch_cpu -ltorch -lc10
+LDFLAGS          += -L${TORCH_DIR}/lib
+LDFLAGS          += -Wl,-rpath,${TORCH_DIR}/lib
+LDFLAGS          += -ltorch_cpu -ltorch -lc10
 endif
 
-LDFLAGS   += -shared
-
+#
+# pybind11 flags
+#
 ifeq ($(UNAME), Darwin)
-LDFLAGS   += -undefined dynamic_lookup
-CXX        = clang++
+LDFLAGS          += -undefined dynamic_lookup
 else
-# print(torch._C._GLIBCXX_USE_CXX11_ABI)
-CXXFLAGS  += -D_GLIBCXX_USE_CXX11_ABI=0
-CXX        = g++
+CXXFLAGS         += -D_GLIBCXX_USE_CXX11_ABI=${TORCH_CXX11_ABI}
 endif
 
-MODS       = model.o policy.o
-
+#
+# actions
+#
+MODS              = model.o policy.o
 
 compile: ${MODS}
 	${CXX} ${CXXFLAGS} ${PYBIND_CXXFLAGS} \
-		c4.cc ${MODS} ${LDFLAGS} -o xai_c4${PY_EXT}
+		c4.cc ${MODS} ${LDFLAGS} -o xai_c4${PY_EXT_SUFFIX}
 
 model.o: model.cc model.h base.h
 	${CXX} ${CXXFLAGS} ${MODEL_CXXFLAGS} ${TORCH_CXXFLAGS} \
@@ -67,7 +69,6 @@ policy.o: policy.cc policy.h base.h
 
 clean:
 	rm -rf *`python3-config --extension-suffix` *.o
-
 
 fmt:
 	clang-format -i --style=file base.h
