--- a/g5/makefile
+++ b/g5/makefile
@@ -1,10 +1,20 @@
+# ------------------------------------------------------------------------------
+# configs from configure.py
+#
+
+-include configure.mk
+
+ifndef G5_CONFIGURE_DONE
+$(error "Project is not configured. Run 'python configure.py' in top level dir")
+endif
+
 run:
 	go run cmd/bot/main.go
 
-fmt:
+fmt: fmt_cc
 	go fmt g5/...
 
-compile:
+compile: compile_cc
 	go build -o /dev/null cmd/bot/main.go
 
 test:
@@ -14,4 +24,8 @@ clean:
 
 release:
 
+compile_cc:
+	make -C cc compile
 
+fmt_cc:
+	make -C cc fmt
