--- a/.github/workflows/g5.yml
+++ b/.github/workflows/g5.yml
@@ -12,6 +12,23 @@ jobs:
       - uses: ./z/.github/actions/base
         with:
           require_go: true
+
+      # ------------------------------------------------------------------------
+      # set up Python
+      #
+      - name: Setup python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
+          cache: 'pip'
+      - working-directory: ${{ github.workspace }}/z/${{ github.workflow }}
+        run:  |
+          pip install -r requirements.txt
+          python configure.py
+
+      # ------------------------------------------------------------------------
+      # workflow
+      #
       - name: Run ${{ github.workflow }} Test
         run: make -C ${{ github.workspace }}/z/${{ github.workflow }} clean test
       - name: Run ${{ github.workflow }} Release
