--- a/.github/workflows/g5.yml
+++ b/.github/workflows/g5.yml
@@ -23,7 +23,8 @@ jobs:
           cache: 'pip'
       - working-directory: ${{ github.workspace }}/z/${{ github.workflow }}
         run:  |
-          pip install -r requirements.txt --index-url https://download.pytorch.org/whl/cpu
+          pip install torch --index-url https://download.pytorch.org/whl/cpu
+          pip install numpy setuptools
           python py/sm.py
           python configure.py --model_dir /tmp
 
