--- a/.github/workflows/g5.yml
+++ b/.github/workflows/g5.yml
@@ -35,3 +35,9 @@ jobs:
       - name: Run ${{ github.workflow }} Release
         run: make -C ${{ github.workspace }}/z/${{ github.workflow }} release
 
+      # ------------------------------------------------------------------------
+      # cc
+
+      - name: Run ${{ github.workflow }} CC
+        run: make -C ${{ github.workspace }}/z/${{ github.workflow }}/cc run
+
