[g5] added game run in github.

--- a/.github/workflows/g5.yml
+++ b/.github/workflows/g5.yml
@@ -37,7 +37,13 @@ jobs:
 
       # ------------------------------------------------------------------------
       # cc
-
+      #
       - name: Run ${{ github.workflow }} CC
         run: make -C ${{ github.workspace }}/z/${{ github.workflow }}/cc run
+
+      # ------------------------------------------------------------------------
+      # game
+      #
+      - name: Run ${{ github.workflow }} Game
+        run: make -C ${{ github.workspace }}/z/${{ github.workflow }}/ game
 
