[g5] added color support of last move in board.

--- a/.github/workflows/g5.yml
+++ b/.github/workflows/g5.yml
@@ -44,6 +44,6 @@ jobs:
       # ------------------------------------------------------------------------
       # game
       #
-      - name: Run ${{ github.workflow }} Game
-        run: make -C ${{ github.workspace }}/z/${{ github.workflow }}/ game
+      # - name: Run ${{ github.workflow }} Game
+      #   run: make -C ${{ github.workspace }}/z/${{ github.workflow }}/ game
 
