[github] Update the script to run.

--- a/.github/workflows/c4.yml
+++ b/.github/workflows/c4.yml
@@ -22,4 +22,4 @@ jobs:
       #
       - working-directory: ${{ github.workspace }}/z/${{ github.workflow }}
         run:  |
-          C4_SANITY_CHECK=1 ./bootstrap.sh
+          C4_SANITY_CHECK=1 ./run.sh
