--- a/sat/Makefile
+++ b/sat/Makefile
@@ -17,7 +17,7 @@ DEPS            += ${BUILD} ${BUILD_OBJ} ${EVE_LIB}
 MODULES         += ${BUILD_OBJ}/algos_sat.o
 MODULES         += ${BUILD_OBJ}/algos_sat_watch.o
 
-#TEST_MODS        = ${BUILD_OBJ}/algos_sat_watch_test.o
+TEST_MODS        = ${BUILD_OBJ}/algos_sat_watch_test.o
 
 # ------------------------------------------------------------------------------
 # Actions
