--- a/ttt/Makefile
+++ b/ttt/Makefile
@@ -1,4 +1,10 @@
+CFLAGS += -Wall -Werror -pedantic -Wextra -Wfatal-errors -Wconversion
+CFLAGS += -O3 -ffast-math -lm
+
 run:
 	mkdir -p .build && \
-	cc ttt.c -o .build/ttt -O3 -Wall -W -ffast-math -lm && \
+	cc ttt.c -o .build/ttt ${CFLAGS} && \
 	.build/ttt
+
+fmt:
+	~/Workspace/y/tools/clang_format_all.sh .
