[c4] Be able to read tensor data from c.

--- a/c4/misc/converter2/Makefile
+++ b/c4/misc/converter2/Makefile
@@ -1,3 +1,10 @@
 ROOT = ../..
+
 run:
 	PYTHONPATH="${ROOT}/lib" C4_STATE_FILE=${ROOT}/.build/weights/c4-resnet-5x5.pt.state ${ROOT}/.build/venv/bin/python converter.py
+
+compile:
+	clang -o a.out -Wall main.c && ./a.out
+
+fmt:
+	~/Workspace/y/tools/clang_format_all.sh .
