[c4c] Added release mode.

--- a/c4c/Makefile
+++ b/c4c/Makefile
@@ -1,7 +1,14 @@
 CFLAGS  += -std=c99 -Wall -Werror -pedantic -Wextra -Wfatal-errors -Wconversion
+LDFLAGS += -lm
+
+ifdef RELEASE
+CFLAGS  += -DNDEBUG -O3 -march=native
+LDFLAGS += -ffast-math
+else
 CFLAGS  += -g
+endif
+
 # CFLAGS  += -fsanitize=address
-LDFLAGS += -lm -ffast-math
 
 compile:
 	clang -o a.out ${CFLAGS} ${LDFLAGS} main.c && ./a.out
