[c4c] Added a rule to download weights.

--- a/c4c/Makefile
+++ b/c4c/Makefile
@@ -10,8 +10,14 @@ endif
 
 # CFLAGS  += -fsanitize=address
 
-compile:
+compile: tensor_data.bin
 	clang -o a.out ${CFLAGS} ${LDFLAGS} main.c && ./a.out
+
+tensor_data.bin:
+	wget -O $@ https://github.com/xiejw/z/releases/download/v0.0.2/tensor_data.bin
 
 fmt:
 	~/Workspace/y/tools/clang_format_all.sh .
+
+clean:
+	rm -rf a.out*
