[c4c] Fixed a bug of using col 0.

--- a/c4c/Makefile
+++ b/c4c/Makefile
@@ -1,3 +1,5 @@
+BUILD    = .build
+
 CFLAGS  += -std=c99 -Wall -Werror -pedantic -Wextra -Wfatal-errors -Wconversion
 LDFLAGS += -lm
 
@@ -10,14 +12,18 @@ endif
 
 # CFLAGS  += -fsanitize=address
 
-compile: tensor_data.bin
-	clang -o a.out ${CFLAGS} ${LDFLAGS} main.c && ./a.out
+compile: ${BUILD}/tensor_data.bin | ${BUILD}
+	clang -o ${BUILD}/a.out ${CFLAGS} ${LDFLAGS} main.c && ./${BUILD}/a.out
 
-tensor_data.bin:
-	wget -O $@ https://github.com/xiejw/z/releases/download/v0.0.2/tensor_data.bin
+${BUILD}/tensor_data.bin: | ${BUILD}
+	wget -O $@ https://github.com/xiejw/z/releases/download/v0.0.2/tensor_data.bin && \
+		sha256sum -c sha256sum.txt
+
+${BUILD}:
+	mkdir -p ${BUILD}
 
 fmt:
 	~/Workspace/y/tools/clang_format_all.sh .
 
 clean:
-	rm -rf a.out*
+	rm -rf ${BUILD}
