[c4c] make wget quiet.

--- a/c4c/Makefile
+++ b/c4c/Makefile
@@ -1,13 +1,14 @@
-BUILD    = .build
+BUILD     = .build
+DATA_FILE = https://github.com/xiejw/z/releases/download/v0.0.2/tensor_data.bin
 
-CFLAGS  += -std=c99 -Wall -Werror -pedantic -Wextra -Wfatal-errors -Wconversion
-LDFLAGS += -lm
+CFLAGS   += -std=c99 -Wall -Werror -pedantic -Wextra -Wfatal-errors -Wconversion
+LDFLAGS  += -lm
 
 ifdef RELEASE
-CFLAGS  += -DNDEBUG -O3 -march=native
-LDFLAGS += -ffast-math
+CFLAGS   += -DNDEBUG -O3 -march=native
+LDFLAGS  += -ffast-math
 else
-CFLAGS  += -g
+CFLAGS   += -g
 endif
 
 # CFLAGS  += -fsanitize=address
@@ -16,8 +17,8 @@ compile: ${BUILD}/tensor_data.bin | ${BUILD}
 	clang -o ${BUILD}/a.out ${CFLAGS} ${LDFLAGS} main.c && ./${BUILD}/a.out
 
 ${BUILD}/tensor_data.bin: | ${BUILD}
-	wget -O $@ https://github.com/xiejw/z/releases/download/v0.0.2/tensor_data.bin && \
-		sha256sum -c sha256sum.txt
+	wget -q --show-progress -O $@ ${DATA_FILE} && \
+		sha256sum -c checksum.txt
 
 ${BUILD}:
 	mkdir -p ${BUILD}
