[c4c] Added value head.

--- a/c4/misc/converter2/Makefile
+++ b/c4/misc/converter2/Makefile
@@ -6,6 +6,7 @@ LDFLAGS += -lm -ffast-math
 
 
 run:
+	mkdir -p .build && \
 	PYTHONPATH="${ROOT}/lib" C4_STATE_FILE=${ROOT}/.build/weights/c4-resnet-5x5.pt.state ${ROOT}/.build/venv/bin/python converter.py
 
 compile:
